<resources>
    <string name="app_name">ShoppingTodo</string>
    <string name="add_item">ADD ITEM</string>
    <string name="delete_list">DELETE LIST</string>
    <string name="add_an_item">Add an item</string>
    <string name="enter_estimated_price">Enter price</string>
    <string name="add_a_note">Add a note...</string>
    <string name="already_purchased">Already purchased</string>
    <string name="btnSave">Save</string>
    <string name="purchased">Purchased</string>
    <string name="spinner_title">Category</string>
    <string name="cb_purchased">Purchased</string>
</resources>
